syntax = "proto3";
package proto;

service Registry {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
    }
}

message RegisterRequest {
    string botName = 1;
    string command = 2;
    string listenAddr = 3;
}

message RegisterResponse {
    string message = 1;
    bool status = 2;
}
