syntax = "proto3";
package proto;

service Commands {
    rpc Command (TgUpdate) returns (Response) {
    }
}

message Response {
    bool status = 1;
}

message TgUpdate {
    int32 UpdateID = 1;
    TgMessage Message = 2;
    // @TODO(Kirill): Implement EditedMEssage
    // @TODO(Kirill): Implement ChannelPost
    // @TODO(Kirill): Implement EditedChannelPost
    // @TODO(Kirill): Implement InlineQuery
    // @TODO(Kirill): Implement ChosenInlineResult
    // @TODO(Kirill): Implement CallbackQuery
    // @TODO(Kirill): Implement ShippingQUery
    // @TODO(Kirill): Implement PreCheckoutQuery
}

message TgMessage {
    uint64 messageID = 1;
    TgFrom From = 2;
    int32 Date = 3;
    TgChat Chat = 4;
    TgUser ForwardedFrom = 5;
    TgChat ForwardedFromChat = 6;
    int64 ForwardedFromMessageID = 7;
    uint64 ForwardDate = 8;
    TgMessage ReplyToMessage = 9;
    uint64 EditDate = 10;
    string Text = 11;
    repeated MessageEntity Entities = 12;
    TgAudio Audio = 13;
    TgDocument Document = 14;
    // @TODO(Kirill): Implement Game
    repeated TgPhotoSize Photo = 15;
    TgSticker Sticker = 16;
    // @TODO(Kirill): Implement Video
    // @TODO(Kirill): Implement VideoNote
    // @TODO(Kirill): Implement Voice
    string Caption = 17;
    // @TODO(Kirill): Implement Contact
    // @TODO(Kirill): Implement Venue
    repeated TgUser NewChatMembers = 18;
    TgUser LeftChatMember = 19;
    string NewChatTitle = 20;
    repeated TgPhotoSize NewChatPhoto = 21;
    bool DeleteChatPhoto = 22;
    bool GroupChatCreated = 23;
    bool SuperGroupChatCreated = 24;
    bool ChannelChatCreated = 25;
    int64 MigrateToChatID = 26;
    int64 MigrateFromChatID = 27;
    TgMessage PinnedMessage = 28;
    // @TODO(Kirill): Implement Invoice
    // @TODO(Kirill): Implement SuccessfulPayment
}

message TgSticker {
    string FileId = 1;
    int32 Wifth = 2;
    int32 Height = 3;
    repeated TgPhotoSize Thumbnail = 4;
    string Emoji = 5;
    int32 FileSize = 6;
}

message TgDocument {
    string FileId = 1;
    TgPhotoSize Thumbnail = 2;
    string FileName = 3;
    string MimeType = 4;
    int32 FileSize = 5;
}

message TgPhotoSize {
    string FileID = 1;
    int32 Width = 2;
    int32 Height = 3;
    int32 FileSize = 4;
}

message TgAudio {
    string FileID = 1;
    int32 Duration = 2;
    string Performer = 3;
    string Title = 4;
    string MimeType = 5;
    int32 FileSize = 6;
}

message MessageEntity {
    string Type = 1;
    int32 Offset = 2;
    int32 Length = 3;
    string URL = 4;
    TgUser User = 5;
}

message TgFrom {
    uint64 ID = 1;
    string FirstName = 2;
    string LastName = 3;
    string UserName = 4;
    string LanguageCode = 5;
    bool isBot = 6;
}

message TgChat {
    int64 ID = 1;
    string Type = 2;
    string Title = 3;
    string UserName = 4;
    string FirstName = 5;
    string LastName = 6;
    bool AllMembersAreAdmins = 7;
    TgChatPhoto Photo = 8;
    string Description = 9;
    string InviteLink = 10;
}

message TgChatPhoto {
    string SmallFileID = 1;
    string BigFileID = 2;
}

message TgUser {
    int64 ID = 1;
    string FirstName = 2;
    string LastName = 3;
    string UserName = 4;
    string LanguageCode = 5;
    bool IsBot = 6;
}
